<resources>
    <string name="app_name">Buku Sekolah Elektronik</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvSd">SD</string>
    <string name="tvSMP">SMP</string>
    <string name="tvSma">SMA</string>
    <string name="tvSMK">SMK</string>
    <string name="facebook_app_id">332622044657905</string>
    <string name="fb_login_protocol_scheme">fb332622044657905</string>
    <string name="txtName">Nama</string>
    <string name="txtEmail">Email</string>
    <string name="sign_out">Sign Out</string>
    <string name="beranda">Beranda</string>
    <string name="buku_digital">Buku Digital</string>
    <string name="terbaru">Terbaru</string>
    <string name="terpopuler">Terpopuler</string>
    <string name="non_kurikulum">Non-Kurikulum</string>
    <string name="jenjang">Jenjang</string>
    <string name="tvPaud">PAUD</string>
    <string name="kesetaraan">Kesetaraan</string>
    <string name="paket_a">Paket A</string>
    <string name="paket_b">Paket B</string>
    <string name="paket_c">Paket C</string>
    <string name="buku_terbaru">Buku Terbaru</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="buku_terpopuler">Buku Terpopuler</string>
    <string name="buku_non_kurikulum">Buku Non Kurikulum</string>
    <string name="tvJudul">Judul</string>
    <string name="tvDeskripsi">Deskripsi</string>
    <string name="buku_paket_a">Buku Paket A</string>
    <string name="buku_paket_b">Buku Paket B</string>
    <string name="buku_paket_c">Buku Paket C</string>
    <string name="buku_smp">Buku SMP</string>
    <string name="buku_paud">Buku PAUD</string>
    <string name="buku_sd">Buku SD</string>
    <string name="buku_sma">Buku SMA</string>
    <string name="buku_smk">Buku SMK</string>
    <string name="penulis">Penulis</string>

</resources>