<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/beranda"/>
    <item android:title="@string/buku_digital">
        <menu>
            <item
                android:id="@+id/subitem_buku_terbaru"
                android:title="@string/terbaru" />
            <item
                android:id="@+id/subitem_buku_terpopuler"
                android:title="@string/terpopuler" />
            <item
                android:id="@+id/subitem_buku_nonkurikulum"
                android:title="@string/non_kurikulum" />
        </menu>
    </item>
    <item android:title="@string/jenjang">
        <menu>
            <item
                android:id="@+id/subitem_paud"
                android:title="@string/tvPaud" />
            <item
                android:id="@+id/subitem_buku_sd"
                android:title="@string/tvSd" />
            <item
                android:id="@+id/subitem_buku_SMP"
                android:title="@string/tvSMP" />
            <item
                android:id="@+id/subitem_buku_SMA"
                android:title="@string/tvSma" />
            <item
                android:id="@+id/subitem_buku_SMK"
                android:title="@string/tvSMK" />
        </menu>
    </item>
    <item android:title="@string/kesetaraan">
        <menu>
            <item
                android:id="@+id/subitem_buku_paket_a"
                android:title="@string/paket_a" />
            <item
                android:id="@+id/subitem_buku_paket_b"
                android:title="@string/paket_b" />
            <item
                android:id="@+id/subitem_buku_paket_c"
                android:title="@string/paket_c" />
        </menu>
    </item>

</menu>