<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivBookCover"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitleBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tvJudul"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/ivBookCover"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBookWriter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/penulis"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/ivBookCover"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleBook" />

    <TextView
        android:id="@+id/tvBookDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:maxLines="3"
        android:text="@string/tvDeskripsi"
        app:layout_constraintStart_toEndOf="@+id/ivBookCover"
        app:layout_constraintTop_toBottomOf="@+id/tvBookWriter" />

</androidx.constraintlayout.widget.ConstraintLayout>