<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:iss_auto_cycle="true"
        app:iss_corner_radius="20"
        app:iss_delay="0"
        app:iss_error_image="@drawable/bg_grey"
        app:iss_period="1000"
        app:iss_placeholder="@drawable/bg_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPAUD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="PAUD"
        android:drawableTop="@drawable/paud"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:src="@drawable/paud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider" />

    <TextView
        android:id="@+id/tvSD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:text="@string/tvSd"
        android:drawableTop="@drawable/sd"
        app:layout_constraintStart_toEndOf="@+id/tvPAUD"
        app:layout_constraintTop_toBottomOf="@+id/slider" />

    <TextView
        android:id="@+id/tvSMP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:drawableTop="@drawable/smp"
        android:text="@string/tvSMP"
        app:layout_constraintStart_toEndOf="@+id/tvSD"
        app:layout_constraintTop_toBottomOf="@+id/slider" />

    <TextView
        android:id="@+id/tvSMA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/tvSma"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:drawableTop="@drawable/sma"
        app:layout_constraintStart_toEndOf="@+id/tvSMP"
        app:layout_constraintTop_toBottomOf="@+id/slider" />

    <TextView
        android:id="@+id/tvSMK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tvSMK"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:drawableTop="@drawable/smk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPAUD" />
</androidx.constraintlayout.widget.ConstraintLayout>